# 30122-shared-notes

./: README.md
labs/debugging/: README.md  pyproject.toml
labs/debugging/data/: dickinson.txt  relativity.txt  sherlock.txt
labs/debugging/data/shakespeare/: hamlet.txt  othello.txt  romeo-juliet.txt
labs/debugging/data/speeches/: bush.txt  kerry.txt  mccain.txt  obama.txt
labs/debugging/textgen/: __main__.py  cleaning.py  markov.py
labs/m2/m2lab/: npr.py
labs/m3/: README.md  pyproject.toml  solutions.md
labs/m4/: regex_lab-soln.ipynb  regex_lab.ipynb  regex_solutions.ipynb
m1/: M1L1 - Interfaces.ipynb  M1L2 - Program Structure.ipynb  import_example.py
m2/: M2.ipynb
m3/: M3 - databases.html  M3 - databases.md
m4/: record-linkage.ipynb  regex.ipynb  regex_lab.ipynb  valdiation.ipynb
m5/: automation.md  visualization.ipynb
m6/: markov.ipynb
m7/: M7L1 - Hashtables.ipynb
